@@ -32,14 +32,14 @@
 #include <stdbool.h>
 #include <ctype.h>
 #include <string.h>
-#ifdef __SDCC_LONGLONG
+#if 0
 #include <stdckdint.h>
 #endif
 #include <limits.h>
 #include <errno.h>
 #include <wchar.h>
 
-#if 0 // Bug 3798
+#ifdef __SDCC_LONGLONG
 static signed char _isdigit(const wchar_t c, unsigned char base)
 {
   unsigned char v;
@@ -123,10 +123,17 @@ unsigned long long int wcstoull(const wchar_t *nptr, wchar_t **endptr, int base)
       if (digit < 0)
         break;
 
-      range_error |= ckd_mul(&ret, ret, b);
+#if 0
+      range_error |= ckd_mul (&ret, ret, b);
       range_error |= ckd_add (&ret, ret, digit);
-
+#else
+      unsigned long long int oldret = ret;
+      ret *= b;
+      if (ret < oldret)
+        range_error = true;
       ret += (unsigned char)digit;
+#warning INEXACT RANGE ERROR CHECK WILL NOT REPORT ALL OVERFLOWS (fix by implementing ckd_mul and ckd_add for unsigned long long)
+#endif
     }
 
   if (endptr)
@@ -141,4 +148,3 @@ unsigned long long int wcstoull(const wchar_t *nptr, wchar_t **endptr, int base)
   return (neg ? -ret : ret);
 }
 #endif
-
